feat: :sparkles: segunda seccion

--- a/index.html
+++ b/index.html
@@ -85,6 +85,65 @@
             </div>
         </div>
     </header>
+
+    <section class="nosotros">
+        <div class="separadores">
+            <div class="separador" id="Nosotros">
+                <img src="img/5fc5c4621ecf2d69372037fb_about-shape.svg" alt="">
+                <p>LOVERS OF LOVE</p>
+            </div>
+            <div class="separador2">
+                <p>FINE ART FILM PHOTOGRAPHERS</p>
+                <img src="img/5fc5c4621ecf2d69372037fb_about-shape.svg" alt="">
+            </div>
+        </div>
+        <div class="containerNos">
+            <div class="imgNosotros">
+                <div class="cuadro1"></div>
+                <div class="cuadro2"></div>
+                <div class="img3n"> <img src="./img/noviosNosotros.png" alt=""> </div>
+            </div>
+            <section class="derTex">
+                <div class="primerF">
+                    <h1>
+                        HOLA <br>
+                        AQUI
+                    </h1>
+                    <div class="ovalo">
+                        <img src="./img/oval.svg" alt="">
+                    </div>
+                </div>
+                <div class="segundaF">
+                    <p>
+                        Somos catadores de pasteles profesionales, pregoneros de bodas y amantes del amor. En resumen,
+                        ¡somos grandes fanaticos del matrimonio! El matrimonio es un compromiso muy especial y tu boda
+                        marca el testimonio y la celebracion de este vinculo. Eestamos muy emocionados por este
+                        increible próximo capitulo de tu vida. ¡lo recomendamos de todo corazon!
+                    </p>
+                </div>
+                <div class="terceraF">
+                    <h3>
+                        TUS NUPCIALISTA
+                    </h3>
+                    <div class="nupcialista">
+                        <img src="./img/anillosReales.svg" alt="">
+                    </div>
+                    <div class="nupcialista">
+                        <img src="./img/estrellaroja.svg" alt="">
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="separadores1">
+            <div class="separador3">
+                <img src="img/5fc5c4621ecf2d69372037fb_about-shape.svg" alt="hueco">
+            </div>
+            <div class="separador4">
+                <img src="img/5fc5c4621ecf2d69372037fb_about-shape.svg" alt="hueco">
+            </div>
+        </div>
+    </section>
+
     <footer></footer>
 </body>
 </html>
