--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@
         </div>
     </section>
 
+    <section class="galeria" id="Galeria">
+        <div class="img1">
+            <img src="./img/galeria/1.jpeg" alt="">
+        </div>
+        <div class="img2">
+            <img src="./img/galeria/2.jpg" alt="">
+        </div>
+        <div class="img3">
+            <img src="./img/galeria/3.jpg" alt="">
+        </div>
+        <div class="img4">
+            <img src="./img/galeria/4.jpg" alt="">
+        </div>
+        <div class="img5">
+            <img src="./img/galeria/5.jpeg" alt="">
+        </div>
+        <div class="img6">
+            <img src="./img/galeria/6.jpg" alt="">
+        </div>
+        <div class="img7">
+            <img src="./img/galeria/7.jpg" alt="">
+        </div>
+    </section>
+
     <footer></footer>
 </body>
 </html>
