feat: :sparkles: seccion pedido

--- a/index.html
+++ b/index.html
@@ -168,6 +168,115 @@
         </div>
     </section>
 
+    <section class="precio" id="Precios">
+        <div class="construye"> 
+            <h1>CONSTRUYE <br> TU PROPIO <br> PAQUETE</h1>
+        </div>
+        <div class="compromiso">
+            <h1> SESIÓN DE COMPROMISO </h1>
+            <div class="inter1">
+                <p>?</p>
+            </div>
+            <div class="sombra"></div>
+            <div class="interruptor">
+                <div class="circulo"></div>
+                <img src="./img/precios/image (11).svg" alt="">
+            </div>
+            <div class="no1"> 
+                <h1>No</h1>
+            </div>
+            <div class="anillosP">
+                <img src="./img/precios/anillos.svg" alt="">
+            </div>
+        </div>
+        <div class="ceremonia">
+            <h1>VIDEO DE LA CEREMONIA </h1>
+            <div class="inter2">
+                <p>?</p>
+            </div>
+            <div class="sombra1"></div>
+            <div class="interruptor1">
+                <div class="circulo2"></div>
+                <img src="./img/precios/image (11).svg" alt="">    
+            </div>
+            <div class="no2">
+                <h1>No</h1>
+            </div>
+        </div>
+        <div class="digital">
+            <h1>SOLO DIGITAL</h1>
+            <div class="interr"><p>?</p></div>
+            <div class="figura">
+                <img src="./img/precios/digital.svg" alt="">
+            </div>
+            <div class="digitalTex">
+                <h1>FILM + <br> DIGITAL</h1>
+            </div> 
+            <div class="camara1">
+                <img src="./img/precios/camara.svg" alt="camara">
+            </div> 
+        </div>
+        <div class="horasT">
+            <div class="hTtex">
+                <h1>HORAS TOTALES</h1>
+            </div>
+            <div class="interro">?</div>
+            <div class="tres">3</div>
+            <div class="horasTt">
+                <div class="barrat"></div>
+                <img src="./img/precios/disco.svg" alt="disco">
+            </div>
+        </div>
+        <div class="cabina">
+            <h1>CABINA DE FOTOS</h1>
+            <div class="contenedormaso"></div>   
+            <div class="masmenos">
+                <div class="menos">
+                    <img src="./img/precios/lupaneg.svg" alt="">
+                </div>
+                <div class="O">
+                    <div class="o"></div>
+                </div>
+                <div class="mas">
+                    <img src="./img/precios/lupa.svg" alt="">
+                </div>
+            </div>
+            <h1>HORAS</h1>
+        </div>
+        <div class="mapa">
+            <div class="lugar">
+                <h1>LUGAR</h1>
+            </div>
+            <div class="interroMap">?</div>
+            <div class="region">
+                <p>Seleccione una region</p>
+            </div>
+            <div class="soielmapa">
+                <img src="./img/precios/mapa.svg" alt="mapa">
+            </div>
+        </div>
+        <div class="total">
+            <div class="totalPaga">
+                <h1>TOTAL</h1>
+            </div>
+            <div class="valorPaga">   
+                <h1>$1,938</h1>
+            </div>    
+        </div>
+        <div class="paquete1">
+            <h1 class="textoPaquete">ENVÍA MI <br> PAQUETE</h1>
+            <div class="sombraBC"></div>
+            <input type="button" onclick="capture()" class="botonContacto">
+            <div class="textoBoton">PRESIONA <br> PARA <br>CAPTURAR</div>
+        </div>
+        <div class="email">
+            <div class="email1">Email:</div>
+            <input type="email" id="mail" name="user_email" />
+        </div>
+    </section>
+
+    
+
     <footer></footer>
 </body>
 </html>
