feat: :sparkles: seccion contacto

--- a/index.html
+++ b/index.html
@@ -275,6 +275,89 @@
         </div>
     </section>
 
+    <section class="contacto" id="Contacto">
+        <div class="linea-azul"></div>
+        <div class="textoC1">
+            <h1>CONSULTA <br>TU FECHA</h1>
+        </div>
+        <div class="textoC2">
+            <h1>¡Revisemos el calendario para tu GRAN DÍA!</h1>
+        </div>
+        <div class="custom-date-input">
+            <h1>00/00/0000</h1>
+            <input type="date" class="date-input" />
+            <div class="lineaC"></div>
+            <div class="flecha">
+                <img src="img/contacto/flecha-naranja.svg" alt="">
+            </div>
+            <div class="flecha-rosadaa">
+                <div class="flecha-rosada">
+                    <img src="img/contacto/flechaRosada.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="cuadroC">
+            <div class="cuadroC-1">
+                SIGUE NUESTRAS REDES <br> Y CONTÁCTANOS
+            </div>
+            <div class="cuadroC-2">
+                <u>POLÍTICAS DE PRIVACIDAD</u>
+            </div>
+            <div class="cuadroC-3">
+                <div class="facebook">
+                    <img src="img/contacto/facebook.svg" alt="">
+                </div>
+            </div>
+            <div class="cuadroC-4">
+                <div class="instagram">
+                    <img src="img/contacto/instagram.svg" alt="">
+                </div>
+            </div>
+            <div class="cuadroC-5">
+                <div class="telegram">
+                    <img src="img/contacto/telegram.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="cuadroC2"></div>
+        <div class="imgC1">
+            <img src="img/contacto/anillos.svg" alt="">
+        </div>
+        <div class="imgC2">
+            <img src="img/contacto/bebidas.svg" alt="">
+        </div>
+        <div class="imgC3">
+            <img src="img/contacto/corazones.svg" alt="">
+        </div>
+        <div class="imgC4">
+            <img src="img/contacto/estrellas.svg" alt="">
+        </div>
+        <div class="imgC5">
+            <img src="img/contacto/loop-naranja.svg" alt="">
+        </div>
+        <div class="imgC6">
+            <img src="img/contacto/loop.svg" alt="">
+        </div>
+        <div class="imgC7">
+            <img src="img/contacto/mano.svg" alt="">
+        </div>
+        <div class="imgC8">
+            <img src="img/contacto/musica.svg" alt="">
+        </div>
+        <div class="imgC9">
+            <img src="img/contacto/pareja.svg" alt="">
+        </div>
+        <div class="imgC10">
+            <img src="img/contacto/smile.svg" alt="">
+        </div>
+        <div class="imgC11">
+            <img src="img/contacto/yay.svg" alt="">
+        </div>
+        <div class="imgC12">
+            <img src="img/contacto/rayo.svg" alt="">
+        </div>
+    </section>
+
     
 
     <footer></footer>
